Tiny fallback font first line letter spacing fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -904,7 +904,7 @@ a:active {
         font-weight: 525; }
         .wf-inactive .chapter > p:first-of-type::first-line {
           font-weight: bold;
-          letter-spacing: 0.01em; } }
+          letter-spacing: -0.01em; } }
   .chapter hr {
     border: none;
     margin-top: calc( var(--body-text-spacer) * 1);
