--- a/assets/scss/partials/_02_html_and_typography.scss
+++ b/assets/scss/partials/_02_html_and_typography.scss
@@ -440,7 +440,7 @@ a {
       font-weight: 525;
       .wf-inactive & {
         font-weight: bold;
-        letter-spacing: 0.01em;
+        letter-spacing: -0.01em;
       }
     }
   }
